src/syntax_analysis/statements/snapshots/rust_monkey_interpreter__syntax_analysis__statements__tests__test_syntax_analysis_for_combined_statements_case1.snap
---
source: src/syntax_analysis/statements/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "abstract_syntax_tree": [
    {
      "STATEMENT": {
        "statement": {
          "LET": {
            "identifier_token": {
              "token_type": "IDENTIFIER",
              "literal": "x"
            },
            "expression": {
              "INTEGER": {
                "integer_token": {
                  "token_type": "INTEGER",
                  "literal": "5"
                }
              }
            }
          }
        }
      }
    },
    {
      "STATEMENT": {
        "statement": {
          "RETURN": {
            "expression": {
              "INTEGER": {
                "integer_token": {
                  "token_type": "INTEGER",
                  "literal": "5"
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
